Fix the small text for text in GtkAboutDialog

The conversion from gtk_widget_override_font to a GtkTextTag
in fbbb66ae7d19516b7a99de3d8b0a96164fb3ead2 was defective.

https://bugzilla.gnome.org/show_bug.cgi?id=701119